thirdparty/unidac/Include/Delphi28/Win32/LiteCallVirtual.hpp


//-- forward type declarations -----------------------------------------------
struct TFuncDef;

struct TFuncDef3250;

struct TSQLite3Db;

//-- type declarations -------------------------------------------------------
typedef System::Byte u8;


typedef System::Int8 i8;


typedef System::Word u16;


typedef unsigned u32;


typedef short i16;


typedef __int64 i64;


typedef TFuncDef *pFuncDef;


struct DECLSPEC_DRECORD TFuncDef
{
public:
	short nArg;
	System::Byte iPrefEnc;
	System::Byte flags;
	void *pUserData;
};



typedef TFuncDef3250 *pFuncDef3250;
struct DECLSPEC_DRECORD TFuncDef3250
{
public:
	System::Int8 nArg;
	System::Byte padding1;
	System::Byte padding2;
	System::Byte padding3;
	unsigned funcFlags;
	void *pUserData;
};


typedef TSQLite3Db *pSQLite3Db;


struct DECLSPEC_DRECORD TSQLite3Db
{
public:
	void *zName;
	void *pBt;
	System::Byte safety_level;
	void *pSchema;
};

//-- var, const, procedure ---------------------------------------------------
#define DACProductName L"VirtualDAC"
#define SQLiteDLLName L"sqlite3.dll"

extern DELPHI_PACKAGE void *SQLITE_STATIC;

extern DELPHI_PACKAGE void *SQLITE_TRANSIENT;