thirdparty/unidac/Source/LiteCallVirtual.pas


//////////////////////////////////////////////////
//  SQLite Data Access Components
//  Copyright © 2008-2021 Devart. All right reserved.
//////////////////////////////////////////////////

{$I VirtualQuery.inc}
{$I LiteDac.inc}
unit LiteCallVirtual;

interface

uses
{$IFDEF MSWINDOWS}
  Windows, Registry, 
{$ENDIF}
  Classes, SysUtils, SyncObjs,
{$IFDEF POSIX}
  Posix.Dlfcn,
{$ENDIF}
{$IFDEF UNIX}
  dl,
{$ENDIF}
  CLRClasses,
  CRTypes,
  DAConsts,
{$IFDEF VIRTUAL_QUERY}
  LiteConstsVirtual;
{$ELSE}
{$IFNDEF UNIDACPRO}
  LiteConsts;
{$ELSE}
  LiteConstsUni;
{$ENDIF}
{$ENDIF}


const
{$IFNDEF VIRTUAL_QUERY}
  DACProductName = 'LiteDAC';
{$ELSE}
  DACProductName = 'VirtualDAC';
{$ENDIF}

  SQLiteDLLName = {$IFDEF MSWINDOWS}
                    'sqlite3.dll';
                  {$ELSE}
                    {$IFDEF MACOS}
                    'libsqlite3.dylib';
                    {$ELSE}
                    {$IFDEF ANDROID}
                    'libsqlite.so';
                    {$ELSE}
                    'libsqlite3.so';
                    {$ENDIF}
                    {$ENDIF}
                  {$ENDIF}

const
  // Result Codes
  SQLITE_OK         =  0;   // Successful result
  SQLITE_ERROR      =  1;   // SQL error or missing database
  SQLITE_INTERNAL   =  2;   // Internal logic error in SQLite
  SQLITE_PERM       =  3;   // Access permission denied
  SQLITE_ABORT      =  4;   // Callback routine requested an abort
  SQLITE_BUSY       =  5;   // The database file is locked
  SQLITE_LOCKED     =  6;   // A table in the database is locked
  SQLITE_NOMEM      =  7;   // A malloc() failed
  SQLITE_READONLY   =  8;   // Attempt to write a readonly database
  SQLITE_INTERRUPT  =  9;   // Operation terminated by sqlite3_interrupt()
  SQLITE_IOERR      = 10;   // Some kind of disk I/O error occurred
  SQLITE_CORRUPT    = 11;   // The database disk image is malformed
  SQLITE_NOTFOUND   = 12;   // NOT USED. Table or record not found
  SQLITE_FULL       = 13;   // Insertion failed because database is full
  SQLITE_CANTOPEN   = 14;   // Unable to open the database file
  SQLITE_PROTOCOL   = 15;   // NOT USED. Database lock protocol error
  SQLITE_EMPTY      = 16;   // Database is empty
  SQLITE_SCHEMA     = 17;   // The database schema changed
  SQLITE_TOOBIG     = 18;   // String or BLOB exceeds size limit
  SQLITE_CONSTRAINT = 19;   // Abort due to constraint violation
  SQLITE_MISMATCH   = 20;   // Data type mismatch
  SQLITE_MISUSE     = 21;   // Library used incorrectly
  SQLITE_NOLFS      = 22;   // Uses OS features not supported on host
  SQLITE_AUTH       = 23;   // Authorization denied
  SQLITE_FORMAT     = 24;   // Auxiliary database format error
  SQLITE_RANGE      = 25;   // 2nd parameter to sqlite3_bind out of range
  SQLITE_NOTADB     = 26;   // File opened that is not a database file
  SQLITE_ROW        = 100;  // sqlite3_step() has another row ready
  SQLITE_DONE       = 101;  // sqlite3_step() has finished executing

  // extended error codes

  SQLITE_BUSY_RECOVERY           = SQLITE_BUSY + 256;        // 261
  SQLITE_LOCKED_SHAREDCACHE      = SQLITE_LOCKED + 256;      // 262
  SQLITE_READONLY_RECOVERY       = SQLITE_READONLY + 256;    // 264
  SQLITE_IOERR_READ              = SQLITE_IOERR + 256;       // 266
  SQLITE_CORRUPT_VTAB            = SQLITE_CORRUPT + 256;     // 267
  SQLITE_CANTOPEN_NOTEMPDIR      = SQLITE_CANTOPEN + 256;    // 270
  SQLITE_ABORT_ROLLBACK          = SQLITE_ABORT + 2*256;     // 516
  SQLITE_BUSY_SNAPSHOT           = SQLITE_BUSY + 2*256;      // 517
  SQLITE_READONLY_CANTLOCK       = SQLITE_READONLY + 2*256;  // 520
  SQLITE_CANTOPEN_ISDIR          = SQLITE_CANTOPEN + 2*256;  // 526
  SQLITE_IOERR_SHORT_READ        = SQLITE_IOERR + 2*256;     // 522
  SQLITE_IOERR_WRITE             = SQLITE_IOERR + 3*256;     // 778
  SQLITE_IOERR_FSYNC             = SQLITE_IOERR + 4*256;     // 1034
  SQLITE_IOERR_DIR_FSYNC         = SQLITE_IOERR + 5*256;     // 1290
  SQLITE_IOERR_TRUNCATE          = SQLITE_IOERR + 6*256;     // 1546
  SQLITE_IOERR_FSTAT             = SQLITE_IOERR + 7*256;     // 1802
  SQLITE_IOERR_UNLOCK            = SQLITE_IOERR + 8*256;     // 2058
  SQLITE_IOERR_RDLOCK            = SQLITE_IOERR + 9*256;     // 2314
  SQLITE_IOERR_DELETE            = SQLITE_IOERR + 10*256;    // 2570
  SQLITE_IOERR_BLOCKED           = SQLITE_IOERR + 11*256;    // 2826
  SQLITE_IOERR_NOMEM             = SQLITE_IOERR + 12*256;    // 3082
  SQLITE_IOERR_ACCESS            = SQLITE_IOERR + 13*256;    // 3338
  SQLITE_IOERR_CHECKRESERVEDLOCK = SQLITE_IOERR + 14*256;    // 3594
  SQLITE_IOERR_LOCK              = SQLITE_IOERR + 15*256;    // 3850
  SQLITE_IOERR_CLOSE             = SQLITE_IOERR + 16*256;    // 4106
  SQLITE_IOERR_DIR_CLOSE         = SQLITE_IOERR + 17*256;    // 4362
  SQLITE_IOERR_SHMOPEN           = SQLITE_IOERR + 18*256;    // 4618
  SQLITE_IOERR_SHMSIZE           = SQLITE_IOERR + 19*256;    // 4874
  SQLITE_IOERR_SHMLOCK           = SQLITE_IOERR + 20*256;    // 5130
  SQLITE_IOERR_SHMMAP            = SQLITE_IOERR + 21*256;    // 5386
  SQLITE_IOERR_SEEK              = SQLITE_IOERR + 22*256;    // 5642
  SQLITE_IOERR_DELETE_NOENT      = SQLITE_IOERR + 23*256;    // 5898

  // Fundamental Datatypes
  SQLITE_INTEGER = 1;
  SQLITE_FLOAT   = 2;
  SQLITE_TEXT    = 3;
  SQLITE_BLOB    = 4;
  SQLITE_NULL    = 5;

  // Special destructor types
  SQLITE_STATIC: IntPtr    = IntPtr(0);
  SQLITE_TRANSIENT: IntPtr = IntPtr(-1);

  SQLITE_UTF8       = 1;
  SQLITE_UTF16LE    = 2;
  SQLITE_UTF16BE    = 3;
  SQLITE_UTF16      = 4;    // Use native byte order
  SQLITE_ANY        = 5;

  SQLITE_OPEN_READONLY         = $00000001;
  SQLITE_OPEN_READWRITE        = $00000002;
  SQLITE_OPEN_CREATE           = $00000004;
  SQLITE_OPEN_DELETEONCLOSE    = $00000008;
  SQLITE_OPEN_EXCLUSIVE        = $00000010;
  SQLITE_OPEN_AUTOPROXY        = $00000020;
  SQLITE_OPEN_URI              = $00000040;
  SQLITE_OPEN_MEMORY           = $00000080;
  SQLITE_OPEN_MAIN_DB          = $00000100;
  SQLITE_OPEN_TEMP_DB          = $00000200;
  SQLITE_OPEN_TRANSIENT_DB     = $00000400;
  SQLITE_OPEN_MAIN_JOURNAL     = $00000800;
  SQLITE_OPEN_TEMP_JOURNAL     = $00001000;
  SQLITE_OPEN_SUBJOURNAL       = $00002000;
  SQLITE_OPEN_MASTER_JOURNAL   = $00004000;
  SQLITE_OPEN_NOMUTEX          = $00008000;
  SQLITE_OPEN_FULLMUTEX        = $00010000;
  SQLITE_OPEN_SHAREDCACHE      = $00020000;
  SQLITE_OPEN_PRIVATECACHE     = $00040000;
  SQLITE_OPEN_WAL              = $00080000;

  SQLITE_IOCAP_ATOMIC                 = $00000001;
  SQLITE_IOCAP_ATOMIC512              = $00000002;
  SQLITE_IOCAP_ATOMIC1K               = $00000004;
  SQLITE_IOCAP_ATOMIC2K               = $00000008;
  SQLITE_IOCAP_ATOMIC4K               = $00000010;
  SQLITE_IOCAP_ATOMIC8K               = $00000020;
  SQLITE_IOCAP_ATOMIC16K              = $00000040;
  SQLITE_IOCAP_ATOMIC32K              = $00000080;
  SQLITE_IOCAP_ATOMIC64K              = $00000100;
  SQLITE_IOCAP_SAFE_APPEND            = $00000200;
  SQLITE_IOCAP_SEQUENTIAL             = $00000400;
  SQLITE_IOCAP_UNDELETABLE_WHEN_OPEN  = $00000800;
  SQLITE_IOCAP_POWERSAFE_OVERWRITE    = $00001000;
  SQLITE_IOCAP_IMMUTABLE              = $00002000;

  SQLITE_FCNTL_LOCKSTATE              = 1;
  SQLITE_GET_LOCKPROXYFILE            = 2;
  SQLITE_SET_LOCKPROXYFILE            = 3;
  SQLITE_LAST_ERRNO                   = 4;
  SQLITE_FCNTL_SIZE_HINT              = 5;
  SQLITE_FCNTL_CHUNK_SIZE             = 6;
  SQLITE_FCNTL_FILE_POINTER           = 7;
  SQLITE_FCNTL_SYNC_OMITTED           = 8;
  SQLITE_FCNTL_WIN32_AV_RETRY         = 9;
  SQLITE_FCNTL_PERSIST_WAL            = 10;
  SQLITE_FCNTL_OVERWRITE              = 11;
  SQLITE_FCNTL_VFSNAME                = 12;
  SQLITE_FCNTL_POWERSAFE_OVERWRITE    = 13;
  SQLITE_FCNTL_PRAGMA                 = 14;
  SQLITE_FCNTL_BUSYHANDLER            = 15;
  SQLITE_FCNTL_TEMPFILENAME           = 16;
  SQLITE_FCNTL_MMAP_SIZE              = 18;
  SQLITE_FCNTL_TRACE                  = 19;
  SQLITE_FCNTL_HAS_MOVED              = 20;
  SQLITE_FCNTL_SYNC                   = 21;
  SQLITE_FCNTL_COMMIT_PHASETWO        = 22;
  SQLITE_FCNTL_WIN32_SET_HANDLE       = 23;

  UNIXFILE_EXCL        = $01;
  UNIXFILE_RDONLY      = $02;
  UNIXFILE_PERSIST_WAL = $04;
  UNIXFILE_DIRSYNC     = $08;
  UNIXFILE_PSOW        = $10;
  UNIXFILE_DELETE      = $20;
  UNIXFILE_URI         = $40;
  UNIXFILE_NOLOCK      = $80;
  UNIXFILE_WARNED      = $100;

  SQLITE_ACCESS_EXISTS    = 0;
  SQLITE_ACCESS_READWRITE = 1;
  SQLITE_ACCESS_READ      = 2;

  NO_LOCK         = 0;
  SHARED_LOCK     = 1;
  RESERVED_LOCK   = 2;
  PENDING_LOCK    = 3;
  EXCLUSIVE_LOCK  = 4;

  PENDING_BYTE  = $40000000;
  RESERVED_BYTE = PENDING_BYTE + 1;

  SQLITE_DEFAULT_SECTOR_SIZE = 4096;
  SQLITE_ANDROID_SECTOR_SIZE = SQLITE_DEFAULT_SECTOR_SIZE;

  SQLITE_SHM_UNLOCK    = 1;
  SQLITE_SHM_LOCK      = 2;
  SQLITE_SHM_SHARED    = 4;
  SQLITE_SHM_EXCLUSIVE = 8;

  //for sqlite3_limit
  SQLITE_LIMIT_LENGTH              = 0;
  SQLITE_LIMIT_SQL_LENGTH          = 1;
  SQLITE_LIMIT_COLUMN              = 2;
  SQLITE_LIMIT_EXPR_DEPTH          = 3;
  SQLITE_LIMIT_COMPOUND_SELECT     = 4;
  SQLITE_LIMIT_VDBE_OP             = 5;
  SQLITE_LIMIT_FUNCTION_ARG        = 6;
  SQLITE_LIMIT_ATTACHED            = 7;
  SQLITE_LIMIT_LIKE_PATTERN_LENGTH = 8;
  SQLITE_LIMIT_VARIABLE_NUMBER     = 9;
  SQLITE_LIMIT_TRIGGER_DEPTH       = 10;
  SQLITE_LIMIT_WORKER_THREADS      = 11;

  DEF_LIMIT_EXPR_DEPTH = 1000;

  SQLITE_VTAB_CONSTRAINT_SUPPORT = 1;

  SQLITE_INDEX_CONSTRAINT_EQ     = 2;
  SQLITE_INDEX_CONSTRAINT_GT     = 4;
  SQLITE_INDEX_CONSTRAINT_LE     = 8;
  SQLITE_INDEX_CONSTRAINT_LT     = 16;
  SQLITE_INDEX_CONSTRAINT_GE     = 32;
  SQLITE_INDEX_CONSTRAINT_MATCH  = 64;
  SQLITE_INDEX_CONSTRAINT_LIKE   = 65;
  SQLITE_INDEX_CONSTRAINT_GLOB   = 66;
  SQLITE_INDEX_CONSTRAINT_REGEXP = 67;
  SQLITE_INDEX_SCAN_UNIQUE       = 1;

  CP_SJIS         = 932;
  CP_GBK          = 936;
  CP_UHC          = 949;
  CP_BIG5         = 950;
  CP_JOHAB        = 1361;
  CP_EUC_JIS_2004 = 20932;
  CP_EUC_JP       = 51932;
  CP_EUC_CN       = 51936;
  CP_EUC_KR       = 51949;
  CP_EUC_TW       = 51950;
  CP_GB18030      = 54936;
  CP_UTF_8        = 65001;

type
  u8                  = byte;
  i8                  = ShortInt;
  u16                 = word;
  u32                 = Cardinal;
  i16                 = SmallInt;
  i64                 = Int64;

{$IFDEF LINUX_FPC}
  pInt = pointer;
{$ENDIF}
{$IFDEF DARWIN_FPC}
  pInt = pointer;
{$ENDIF}

  pFuncDef = ^TFuncDef;
  TFuncDef = record
    nArg: i16;            // Number of arguments.  -1 means unlimited */
    iPrefEnc: u8;         // Preferred text encoding (SQLITE_UTF8, 16LE, 16BE) */
    flags: u8;            // Some combination of SQLITE_FUNC_* */
    pUserData: IntPtr;    // User data parameter */
  end;

  pFuncDef3250 = ^TFuncDef3250;
  TFuncDef3250 = packed record
    nArg: i8;             // Number of arguments.  -1 means unlimited */
    padding1: u8;
    padding2: u8;
    padding3: u8;
    funcFlags: u32;       // Some combination of SQLITE_FUNC_* */
    pUserData: IntPtr;    // User data parameter */
  end;

  pSQLite3Db = ^TSQLite3Db;
  TSQLite3Db = record
    zName: IntPtr;    // Name of this database */
    pBt: IntPtr;      // The B*Tree structure for this database file */
    safety_level: u8; // How aggressive at syncing data to disk */
    pSchema: IntPtr;  // Pointer to database schema (possibly shared) */
  end;
